// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Snackbar> renders 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "height": "100%",
      "justifyContent": "flex-end",
      "left": 0,
      "opacity": 1,
      "padding": 16,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <View
    pointerEvents="auto"
    style={
      Object {
        "backgroundColor": "#000000",
        "borderRadius": 3,
        "display": undefined,
        "maxHeight": "100%",
        "maxWidth": 512,
        "minWidth": "66%",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.26,
        "shadowRadius": 5,
        "transform": Array [
          Object {
            "translateY": 0,
          },
        ],
      }
    }
  >
    <RCTSafeAreaView
      style={
        Object {
          "flex": 1,
          "maxHeight": "100%",
        }
      }
    >
      <View
        enabled={true}
        keyboardVerticalOffset={0}
        onLayout={[Function]}
      >
        <View
          style={
            Array [
              undefined,
              Object {
                "bottom": 0,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          />
          <RCTScrollView
            style={
              Array [
                Object {
                  "paddingBottom": 16,
                  "paddingHorizontal": 16,
                },
                false,
              ]
            }
          >
            <View>
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "marginTop": 16,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#4a4a4a",
                        "fontFamily": undefined,
                        "fontWeight": "400",
                        "textAlignVertical": "center",
                      },
                      Object {
                        "fontSize": 14,
                        "lineHeight": 24,
                      },
                      false,
                      Object {
                        "color": "#ffffff",
                        "flex": 1,
                      },
                    ]
                  }
                />
              </View>
            </View>
          </RCTScrollView>
        </View>
      </View>
    </RCTSafeAreaView>
  </View>
</View>
`;

exports[`<Snackbar> when {button} 1`] = `
<share
  button="Close"
  caption="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s."
  visible={true}
/>
`;

exports[`<Snackbar> when {caption} 1`] = `
<share
  caption="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s."
  visible={true}
/>
`;

exports[`<Snackbar> when {visible} (false) 1`] = `
<share
  caption="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s."
  visible={false}
/>
`;

exports[`<Snackbar> when inherit {button} color 1`] = `
<share
  button="Close"
  caption="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s."
  color="red"
  visible={true}
/>
`;
